@@ -1,5 +1,7 @@
 2012-01-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* assistant_twitter.py, twitterauthorize.py, assistant_twitter.glade:
+	  Added an assistant for twitter authorization.
 	* settings.py, com.googlecode.gfeedline.gschema.xml.in: Added GSettings.
 	* preferences.py, preferences.glade: Added preferences.
 
